Closed Bug 489034 Opened 17 years ago Closed 17 years ago

let declaration getting lost in certain situations

Categories

(Core :: JavaScript Engine, defect, P1)

1.9.1 Branch
defect

Tracking

()

RESOLVED FIXED
mozilla1.9.1

People

(Reporter: dao, Assigned: brendan)

References

Details

(Keywords: fixed1.9.1, regression, Whiteboard: fixed-in-tracemonkey)

Attachments

(3 files)

Attached file tests
See attached tests. Those with nested setTimeouts or a setTimeout in an event listener fail on branch but pass on 1.9 *and on trunk*. I'm filing this bug, because I don't know: * what fixed this on trunk * if that other bug was exactly about this issue * in case it was about a different issue, if that is already blocking * and if similar tests are in the testsuite now.
Flags: in-testsuite?
Flags: blocking1.9.1?
Status: NEW → RESOLVED
Closed: 17 years ago
Resolution: --- → FIXED
Whiteboard: DUPEME
just landed Bug 488015 on branch
Flags: blocking1.9.1? → blocking1.9.1+
Works on 1.9.1 with the latest hourly. Mozilla/5.0 (Windows; U; Windows NT 5.1; de-DE; rv:1.9.1b4pre) Gecko/20090418 Shiretoko/3.5b4pre
Depends on: 488015
Keywords: fixed1.9.1
Whiteboard: DUPEME
This is broken again on trunk, not yet on branch.
Status: RESOLVED → REOPENED
Resolution: FIXED → ---
Attached file shell testcase
Assignee: general → brendan
Status: REOPENED → ASSIGNED
Removing fixed1.9.1 to be safe. /be
Keywords: fixed1.9.1
Priority: -- → P1
Target Milestone: --- → mozilla1.9.1
Every function in between a non-heavyweight closure we can't optimize into a flat or null closure must be heavyweight, if there's a top level let binding used by the innermost function being considered. This fixes Dao's test (thanks for that test, btw!). /be
Attachment #377755 - Flags: review?(mrbkap)
Attachment #377755 - Flags: review?(mrbkap) → review+
Whiteboard: fixed-in-tracemonkey
Status: ASSIGNED → RESOLVED
Closed: 17 years ago17 years ago
Resolution: --- → FIXED
Blocks: 494518
No longer blocks: 494518
Depends on: 494518
No longer depends on: 494518
Depends on: 494544
No longer depends on: 494544
Flags: in-testsuite?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: