Bug 489034 - let declaration getting lost in certain situations (r=mrbkap).